<resources>
    <string name="app_name" translatable="false">Cinemap</string>
    <string name="ib_settings_button">Profile button</string>
    <string name="year" translatable="false">1970</string>
    <string name="marker_poster_image_cd">Poster image</string>
    <string name="info_original_title">Original Title</string>
    <string name="info_duration" translatable="false">120 min</string>
    <string name="info_director">Director</string>
    <string name="na" translatable="false">N/A</string>
    <string name="btn_clearmap">clear map</string>
    <string name="btn_save">Save button</string>
    <string name="ib_back">Back button</string>
    <string name="tv_history_title">Your expedition history</string>
    <string name="tv_history_profile_title" translatable="false">%s</string>
    <string name="tv_history_profile_0" >Awaiting your next journey</string>
    <string name="tv_history_profile_10" >A hobbit on an unexpected journey</string>
    <string name="tv_history_profile_20" >A dream traveler</string>
    <string name="tv_history_profile_40" >A professor of archaeology</string>
    <string name="tv_history_profile_70" >A knight of the Round Table</string>
    <string name="tv_history_profile_99" >A barefoot wanderer of Middle-Earth</string>
    <string name="tv_history_profile_100" >A space Odysseus</string>
    <string name="tv_history_films_count">"Films discovered: %d"</string>
    <string name="tv_history_countries_count">"Countries explored: %d"</string>
    <string name="tv_history_continents_count">"Continents explored: SOON"</string>
    <string name="tv_history_years_count">"Years of expedition: %d"</string>
    <string name="et_search_countries">search country...</string>
    <string name="ib_search_button_ct">Search button</string>
    <string name="tv_config_title">Settings</string>
    <string name="hints">Tips:</string>
    <string name="hints_text">mark the compass rose to save films you like and build your expedition history</string>
    <string name="tv_btn_saved_title">Show already saved films on map</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="cb_config_mode_prod">production country</string>
    <string name="cb_config_mode_location">location</string>
    <string name="tv_btn_mode_title">Map mode (SOON)</string>
    <string name="tv_btn_year_title">Calendar mode (SOON)</string>
    <string name="cb_config_year_release">release date</string>
    <string name="cb_config_year_setin">set in</string>
    <string name="cb_config_lang_original">original</string>
    <string name="cb_config_lang_inter">international</string>
    <string name="tv_btn_lang_title">Film\'s title language</string>
    <string name="credits">Credits</string>
    <string name="credits_text">Github: github.com/lucaslimb\nEmail: lucasdelimabzr@gmail.com\nLetterboxd: limapictures\nAll data provided by\nTMDB API\nGoogle Maps API</string>
    <string name="tv_app_lang_title">App language</string>
    <string name="tv_app_lang">Same as device</string>
    <string name="tv_sf_title">Title</string>
    <string name="tv_sf_director">Director</string>
    <string name="tv_sf_oneliner" translatable="false">tagline</string>
    <string name="info_country">Genre</string>
</resources>