<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_config_include"
        layout="@layout/component_toolbar_config"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_config_title"
        android:textColor="@color/slider_grey"
        android:gravity="center_horizontal"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        />

    <TextView
        android:id="@+id/tv_hints_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hints"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tv_hints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hints_text"
        android:textColor="@color/font_grey"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/tv_btn_lang_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_btn_lang_title"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

            <RadioGroup
                android:id="@+id/rg_lang_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/cb_config_lang_original"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_config_lang_original"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:checked="false"
                    android:buttonTint="@color/marker_brown"
                    />
                <RadioButton
                    android:id="@+id/cb_config_lang_inter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_config_lang_inter"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:checked="true"
                    android:buttonTint="@color/marker_brown"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_btn_saved_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_btn_saved_title"
                android:textColor="@color/black"
                android:fontFamily="@font/courierprime_regular"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />

            <RadioGroup
                android:id="@+id/rg_saved_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/cb_config_saved_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:checked="false"
                    android:buttonTint="@color/marker_brown"
                    />
                <RadioButton
                    android:id="@+id/cb_config_saved_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:checked="true"
                    android:buttonTint="@color/marker_brown"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_btn_mode_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_btn_mode_title"
                android:textColor="@color/black"
                android:fontFamily="@font/courierprime_regular"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />

            <RadioGroup
                android:id="@+id/rg_mode_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/cb_config_mode_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_config_mode_prod"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:clickable="false"
                    />
                <RadioButton
                    android:id="@+id/cb_config_mode_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_config_mode_location"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:clickable="false"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_btn_year_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_btn_year_title"
                android:textColor="@color/black"
                android:fontFamily="@font/courierprime_regular"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />

            <RadioGroup
                android:id="@+id/rg_year_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/cb_config_year_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_config_year_release"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:clickable="false"
                    />
                <RadioButton
                    android:id="@+id/cb_config_year_setin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_config_year_setin"
                    android:textColor="@color/font_grey"
                    android:textSize="16sp"
                    android:fontFamily="@font/courierprime_regular"
                    android:clickable="false"/>
            </RadioGroup>

    <TextView
        android:id="@+id/tv_credits_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_text"
        android:textColor="@color/font_grey"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:gravity="center"
        />

        </LinearLayout>
    </ScrollView>


</LinearLayout>