<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_history_include"
        layout="@layout/component_toolbar_history"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_history_title"
        android:textColor="@color/slider_grey"
        android:gravity="center_horizontal"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        />

    <TextView
        android:id="@+id/tv_history_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_history_profile_title"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tv_history_films_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_history_films_count"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tv_history_countries_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_history_countries_count"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tv_history_continents_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_history_continents_count"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/tv_history_years_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_history_years_count"
        android:textColor="@color/black"
        android:fontFamily="@font/courierprime_regular"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_saved_films"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_recycler_saved_films" />


</LinearLayout>