<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
            android:background="@color/background"
    android:layout_gravity="center_horizontal">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/component_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0" />

   <TextView
       android:id="@+id/tv_year"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/year"
       android:gravity="center"
       android:textSize="22sp"
       android:textColor="@color/font_grey"
       android:fontFamily="@font/courierprime_regular"/>

    <lucaslimb.com.github.cinemap.views.TimelineSliderView
        android:id="@+id/timelineSlider"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:weightSum="3">

    <EditText
        android:id="@+id/et_country_search"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:hint="@string/et_search_countries"
        android:textColorHint="@color/slider_grey"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/courierprime_regular"
        android:inputType="text"
        />

    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/ib_search_button_ct"
        android:src="@drawable/baseline_search_24"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginEnd="12dp"
        />

    <Button
        android:id="@+id/btn_clearmap"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:fontFamily="@font/courierprime_regular"
        android:text="@string/btn_clearmap"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/slider_grey"
        android:textSize="16sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>



</LinearLayout>